Wrap words to prevent terminal input horizontal overflow

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -77,6 +77,7 @@ textarea:focus {
 .terminal-text {
   font-family: monaco, Consolas, "Lucida Console", monospace;
   font-size: 12px;
+  word-break: break-word;
 }
 
 .path {
